--- a/ament_index_cpp/CMakeLists.txt
+++ b/ament_index_cpp/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(${PROJECT_NAME} SHARED
   src/get_resource.cpp
   src/get_resources.cpp
   src/get_search_paths.cpp)
+target_compile_definitions(${PROJECT_NAME} PRIVATE "AMENT_INDEX_CPP_BUILDING_DLL")
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 
 ament_export_include_directories(include)
