--- a/ament_index_cpp/CMakeLists.txt
+++ b/ament_index_cpp/CMakeLists.txt
@@ -32,7 +32,7 @@ if(BUILD_TESTING)
     if(NOT WIN32)
         set(THREADS_PREFER_PTHREAD_FLAG ON)
         find_package(Threads REQUIRED)
-        target_link_libraries(${PROJECT_NAME}_utest ${PROJECT_NAME} Threads::Threads)
+        target_link_libraries(${PROJECT_NAME}_utest Threads::Threads)
     endif()
   endif()
 endif()
