--- a/ament_index_python/package.xml
+++ b/ament_index_python/package.xml
@@ -11,7 +11,7 @@
 
   <build_depend>python3-setuptools</build_depend>
 
-  <buildtool_depend>python3</buildtool_depend>
+  <exec_depend>python3</exec_depend>
 
   <buildtool_export_depend>python3</buildtool_export_depend>
 
