--- a/ament_index_python/package.xml
+++ b/ament_index_python/package.xml
@@ -9,11 +9,9 @@
   <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <license>Apache License 2.0</license>
 
-  <build_depend>python3-setuptools</build_depend>
+  <buildtool_depend>python3-setuptools</buildtool_depend>
 
   <exec_depend>python3</exec_depend>
-
-  <buildtool_export_depend>python3</buildtool_export_depend>
 
   <test_depend>ament_pep257</test_depend>
   <test_depend>ament_pep8</test_depend>
