--- a/ament_index_cpp/package.xml
+++ b/ament_index_cpp/package.xml
@@ -6,8 +6,10 @@
   <description>
     C++ API to access the ament resource index.
   </description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
+  <maintainer email="clairewang@openrobotics.org">Claire Wang</maintainer>
   <license>Apache License 2.0</license>
+
+  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
