--- a/ament_index_cpp/package.xml
+++ b/ament_index_cpp/package.xml
@@ -7,6 +7,7 @@
     C++ API to access the ament resource index.
   </description>
   <maintainer email="clairewang@openrobotics.org">Claire Wang</maintainer>
+  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
   <license>Apache License 2.0</license>
 
   <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
