--- a/ament_index_cpp/package.xml
+++ b/ament_index_cpp/package.xml
@@ -6,11 +6,11 @@
   <description>
     C++ API to access the ament resource index.
   </description>
-  <maintainer email="clairewang@openrobotics.org">Claire Wang</maintainer>
   <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
   <license>Apache License 2.0</license>
 
-  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
+  <author>Dirk Thomas</author>
+  <author>Claire Wang</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
