Update maintainers to Dharini Dutia
Signed-off-by: Audrow Nash <audrow@openrobotics.org>

--- a/ament_index_cpp/package.xml
+++ b/ament_index_cpp/package.xml
@@ -6,11 +6,14 @@
   <description>
     C++ API to access the ament resource index.
   </description>
-  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
+
+  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>
+
   <license>Apache License 2.0</license>
 
-  <author>Dirk Thomas</author>
+  <author email="audrow@openrobotics.org">Audrow Nash</author>
   <author>Claire Wang</author>
+  <author>Dirk Thomas</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
