--- a/ament_index_python/package.xml
+++ b/ament_index_python/package.xml
@@ -6,11 +6,14 @@
   <description>
     Python API to access the ament resource index.
   </description>
-  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>
+
+  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>
+
   <license>Apache License 2.0</license>
 
-  <author>Dirk Thomas</author>
+  <author email="audrow@openrobotics.org">Audrow Nash</author>
   <author>Claire Wang</author>
+  <author>Dirk Thomas</author>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
